# micromouse-py-sim

./: .pylintrc  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pdf.yml
documents/: definitions.tex  main.tex  refs.bib  titlepage.tex
mazes/: bad_deadend.maze  bad_deadend_0.maze  bad_deadend_crash.maze  example.2x3.maz  example.csv  example.maze  example.num  floating.maze  floating2.maze  heatmap.maze  japan_2017.maze  longer.maze  not_connected.maze  presets.json  semifinal_2010.maze  simple.maze  small.maze
sim/: __init__.py  __main__.py  directions.py  front.py  gui.py  maze.py  simulator.py  temp.py  tools.py  unionfind.py
sim/robots/: __init__.py  const.py  flood_fill.py  idle.py  random.py  utils.py  wall_follower.py
tests/: test_directions.py  test_timer.py  test_walls.py
tests/robots/: test_const.py  utils.py
